--- a/onlineeducation.html
+++ b/onlineeducation.html
@@ -6,8 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>IEducate - Transforming education online</title>
-    <link rel="stylesheet" href="/css/style.css">
-    <link rel="stylesheet" media="" href="/css/responsive.css">
+    <link rel="stylesheet" href="/technologywebsite/css/style.css">
+    <link rel="stylesheet" media="" href="/technologywebsite/css/style.css">
     
 </head>
 
@@ -44,7 +44,7 @@
                 </div>
             </div>
             <div class="secondHalf">
-                <img src="/img/logo.png" alt="Laptop Img">
+                <img src="/technologywebsite/img/logo.png" alt="Laptop Img">
             </div>
         </div>
     </section>
